--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-#Not used staff
+#Not used staff and others
 notUsedSprites/**
 *.lnk
 imagesProjects/**
+*.iml
